

namespace WorkCloneCS
{
    public partial class tableNumberForm : Form
    {
        private int currentID;
        public int tableSelected;
        private int maxTableNumber = 1000;
        private DateTime timeSinceLastClick;
        
        public tableNumberForm()
        {
            currentID = 0;
            InitializeComponent();
            timeSinceLastClick = DateTime.MinValue;
            displayBtn.Text = "";
        }

        private void updateDisplayBtnText()
        {
            if (currentID == 0) displayBtn.Text = "";
            else displayBtn.Text = currentID.ToString();
        }

        private void numberBtn_Click(object sender, EventArgs e)
        {
            if (currentID == 0) currentID = int.Parse(((Button)sender).Text);
            else currentID = (currentID * 10) + int.Parse(((Button)sender).Text);

                
            updateDisplayBtnText();
        }

        private void btnEsc_Click(object sender, EventArgs e)
        {
            if (timeSinceLastClick >= (DateTime.Now) - TimeSpan.FromSeconds(0.2))
            {
                tableSelected = 0;
                this.Close();
                
            }
            timeSinceLastClick = DateTime.Now;
            currentID = 0;
            updateDisplayBtnText();
        }

        private void btnOK_Click(object sender, EventArgs e)
        {
            tableSelected = 0;
            if (currentID < maxTableNumber && currentID > 0)
            {
                tableSelected = currentID;
                Close();
            } 
            if (tableSelected == 0)
            {
                MessageBox.Show("invalid id");
            }
        }
    }
}
